[package]
name = "cargo-build-dependencies"
version = "0.1.3"
authors = ["errmac-v"]
edition = "2018"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "cargo-subcommand", "cli", "dependencies", "crates"]
license = "MIT"
repository = "https://github.com/errmac-v/cargo-build-dependencies"
description = """
A cargo subcommand to build dependencies, helps speed up docker builds by 
allowing dependencies to be built earlier and cached.
"""
readme = "README.md"

[dependencies]
toml = "0.5.6"
clap = "2.33.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "0.9.1"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
  "precommit-hook",
  "postmerge-hook",
  "run-cargo-fmt",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-test"
]
